# NGINDX

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
docs/: TODO.txt
docs/d3d12/: Base.md  Initialization.md
scripts/: VS2026-WIN64.bat
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt
src/Engine/NGINDX/: NGINDX.h  pch.h
src/Engine/NGINDX/Backend/D3D12/: D3D12Backend.cpp  D3D12Backend.h
src/Engine/NGINDX/Core/: CommandLineArgs.cpp  CommandLineArgs.h  GameCore.cpp  GameCore.h  IMessageHandler.h  Log.cpp  Log.h  StepTimer.h  Utils.cpp  Utils.h
src/Engine/NGINDX/Graphics/: D3D12Backend.cpp  D3D12Backend.h  D3D12Utils.cpp  D3D12Utils.h
src/Engine/NGINDX/Platform/Windows/: BaseWindow.h  MainWindow.cpp  MainWindow.h
src/Engine/NGINDX/Window/: BaseWindow.h  MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt
tests/Sandbox/: CMakeLists.txt  Sandbox.cpp  pch.h
